@@ -15,6 +15,7 @@ This release includes the following bugfixes:
 
  o crash on bad socket close with FTP
  o leaking cookie memory when duplicate domains or paths were used
+ o build fix for Symbian
 
 This release includes the following known bugs:
 
@@ -23,6 +24,6 @@ This release includes the following known bugs:
 This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
- Kamil Dudka, Caolan McNamara
+ Kamil Dudka, Caolan McNamara, Frank McGeough
 
         Thanks! (and sorry if I forgot to mention someone)
